# libjenkins

./: .gitignore  .travis.yml  .vim.custom  CHANGELOG.markdown  CHANGELOG.md  Guardfile  Jenkins-Discover.html  Jenkins-REST-Internal.html  Jenkins-REST-Lens.html  Jenkins-REST-Method.html  Jenkins-REST.html  Jenkins-Rest-Internal.html  Jenkins-Rest-Method-Internal.html  Jenkins-Rest-Method.html  Jenkins-Rest.html  Jenkins.html  LICENSE  Network-HTTP-Client-Lens.html  Network-HTTP-Conduit-Lens.html  README.md  X.hs  default.nix  doc-index.html  env.nix  index-frames.html  index.html  libjenkins.cabal  libjenkins.haddock  libjenkins.nix  mini_Jenkins-Discover.html  mini_Jenkins-REST-Internal.html  mini_Jenkins-REST-Lens.html  mini_Jenkins-REST-Method.html  mini_Jenkins-REST.html  mini_Jenkins-Rest-Internal.html  mini_Jenkins-Rest-Method-Internal.html  mini_Jenkins-Rest-Method.html  mini_Jenkins-Rest.html  mini_Jenkins.html  mini_Network-HTTP-Client-Lens.html  (+4 more)
bench/: Concurrency.hs  Concurrent.hs  README.markdown  Sequential.hs
build-docs.fpLKjO/libjenkins-0.5.0-docs/: Jenkins-Discover.html  Jenkins-Rest-Internal.html  Jenkins-Rest-Method.html  Jenkins-Rest.html  Network-HTTP-Conduit-Lens.html  doc-index.html  libjenkins.haddock  libjenkins.txt  mini_Jenkins-Rest-Internal.html  mini_Jenkins-Rest.html  mini_Network-HTTP-Conduit-Lens.html
build-docs.fpLKjO/libjenkins-0.5.0-docs/src/: Jenkins-Discover.html  Jenkins-Rest-Internal.html  Jenkins-Rest-Method.html  Network-HTTP-Conduit-Lens.html
example/: .vim.custom  Rename.hs  default.nix  discover.hs  env.nix  grep-jobs.hs  libjenkins-examples.cabal  libjenkins-examples.nix  rename-jobs.hs  repl.hs  result  running-jobs-count.hs
example/jenkins-cli/: .vim.custom  Guardfile  jenkins-cli.cabal
example/jenkins-cli/src/: Config.hs  Main.hs  Options.hs
example/jenkins-cli/test/: ConfigSpec.hs  OptionsSpec.hs
examples/: Discover.hs  Failed.hs  Jobs.hs  Rename.hs  grep-jobs.hs  libjenkins-examples.cabal  running-jobs-count.hs
src/: Jenkins-Discover.html  Jenkins-REST-Internal.html  Jenkins-REST-Lens.html  Jenkins-REST-Method.html  Jenkins-REST.html  Jenkins-Rest-Internal.html  Jenkins-Rest-Method-Internal.html  Jenkins-Rest-Method.html  Jenkins-Rest.html  Jenkins.hs  Network-HTTP-Client-Lens-Internal.html  Network-HTTP-Client-Lens.html  Network-HTTP-Conduit-Lens.html
src/Jenkins/: Discover.hs  REST.hs  Rest.hs
src/Jenkins/REST/: Internal.hs  Lens.hs  Method.hs
src/Jenkins/Rest/: Internal.hs  Method.hs
src/Jenkins/Rest/Method/: Internal.hs
src/Network/HTTP/Client/: Lens.hs
src/Network/HTTP/Client/Lens/: Internal.hs
src/Network/HTTP/Conduit/: Lens.hs
test/: Doctest.hs
test/Jenkins/: DiscoverSpec.hs  RESTSpec.hs  RestSpec.hs
test/Jenkins/Rest/: InternalSpec.hs
test/Jenkins/Rest/Method/: InternalSpec.hs
tests/: Doctests.hs
