name:                libjenkins-examples
version:             0.1.0.0
synopsis:            libjenkins library examples
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable grep-jobs
  default-language:  Haskell2010
  main-is:           grep-jobs.hs
  build-depends:
      base
    , lens       >= 4.0
    , libjenkins
    , process
    , text

executable jenkins-rename
  default-language:  Haskell2010
  main-is:           rename-jobs.hs
  build-depends:
      base
    , bytestring
    , lens       >= 4.0
    , libjenkins
    , text

executable jenkins-discover
  default-language:  Haskell2010
  main-is:           discover.hs
  build-depends:
      base
    , libjenkins
    , text

executable running-jobs-count
  default-language:  Haskell2010
  main-is:           running-jobs-count.hs
  build-depends:
      base
    , bytestring
    , lens       >= 4.0
    , libjenkins
