name:                libjenkins-examples
version:             0.1.0.0
synopsis:            libjenkins library examples
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

executable jenkins-jobs
  default-language:  Haskell2010
  main-is:           Jobs.hs
  build-depends:
      ansi-terminal
    , base
    , bytestring
    , lens
    , lens-aeson
    , libjenkins
    , text

executable jenkins-rename
  default-language:  Haskell2010
  main-is:           Rename.hs
  build-depends:
      base
    , bytestring
    , lens
    , lens-aeson
    , libjenkins
    , text

executable jenkins-discover
  default-language:  Haskell2010
  main-is:           Discover.hs
  build-depends:
      base
    , libjenkins
    , text
