name:                jenkins-cli
version:             0.1.0.0
synopsis:            Jenkins CLI client
description:         Jenkins CLI client
license:             BSD3
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            System
build-type:          Simple
cabal-version:       >= 1.10

executable jenkins-cli
  default-language:  Haskell2010
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:
      Config
      Options
  build-depends:
      aeson                   >= 0.7   && < 0.8
    , base
    , bytestring              >= 0.9   && < 0.11
    , directory               >= 1.1   && < 2.0
    , filepath                >= 1.2   && < 2.0
    , lens                    >= 4.0
    , libjenkins              >= 0.4
    , optparse-applicative    >= 0.7   && < 0.8
    , process
    , text
    , xml-conduit
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

test-suite spec
  default-language:  Haskell2010
  hs-source-dirs:
      src
    , test
  main-is:           Spec.hs
  build-depends:
      aeson
    , base
    , bytestring
    , directory
    , filepath
    , hspec                   >= 1.7
    , hspec-expectations-lens >= 0.3
    , lens
    , libjenkins
    , optparse-applicative
    , process
    , text
    , xml-conduit
  type:              exitcode-stdio-1.0
  cpp-options:
    -DTEST
